--- a/public/algemene-voorwaarden.html
+++ b/public/algemene-voorwaarden.html
@@ -331,7 +331,7 @@
                 <h2>1. Definities</h2>
                 <p>In deze Algemene Voorwaarden wordt verstaan onder:</p>
                 <ul>
-                    <li><strong>Mijnautoverkopen.be:</strong> Handelsnaam van AutoCash BV, gevestigd te Brussel, KBO-nummer 0123.456.789.</li>
+                    <li><strong>Mijnautoverkopen.be:</strong> Handelsnaam van Mijnautoverkopen BV, gevestigd te Brussel, KBO-nummer 0123.456.789.</li>
                     <li><strong>Klant:</strong> De natuurlijke persoon of rechtspersoon die een overeenkomst aangaat met Mijnautoverkopen.be.</li>
                     <li><strong>Overeenkomst:</strong> De overeenkomst tussen Mijnautoverkopen.be en Klant inzake de verkoop van een voertuig.</li>
                     <li><strong>Voertuig:</strong> De personenauto, bestelwagen of motorfiets die onderwerp is van de overeenkomst.</li>
@@ -414,7 +414,7 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col">
-                    <h4>AutoCash</h4>
+                    <h4>Mijnautoverkopen</h4>
                     <ul class="footer-links">
                         <li><a href="/">Home</a></li>
                         <li><a href="/#hoe-het-werkt">Hoe het werkt</a></li>
@@ -455,7 +455,7 @@
             
             <div class="footer-bottom">
                 <div class="copyright">
-                    © 2025 AutoCash. Alle rechten voorbehouden.
+                    © 2025 Mijnautoverkopen. Alle rechten voorbehouden.
                 </div>
                 <div class="social-links">
                     <a href="#" class="social-link">
