--- a/public/disclaimer.html
+++ b/public/disclaimer.html
@@ -329,7 +329,7 @@
             
             <div class="content-card">
                 <h2>1. Algemeen</h2>
-                <p>Deze disclaimer is van toepassing op de website <a href="https://www.mijnautoverkopen.be">www.mijnautoverkopen.be</a>, eigendom van AutoCash BV (hierna te noemen "Mijnautoverkopen.be"). Door gebruik te maken van deze website stemt u in met deze disclaimer.</p>
+                <p>Deze disclaimer is van toepassing op de website <a href="https://www.mijnautoverkopen.be">www.mijnautoverkopen.be</a>, eigendom van Mijnautoverkopen BV (hierna te noemen "Mijnautoverkopen.be"). Door gebruik te maken van deze website stemt u in met deze disclaimer.</p>
                 <p>Mijnautoverkopen.be behoudt zich het recht voor om de inhoud van deze disclaimer te allen tijde te wijzigen. Wijzigingen worden op deze pagina gepubliceerd. We raden u aan om deze pagina regelmatig te raadplegen.</p>
 
                 <h2>2. Informatie en aansprakelijkheid</h2>
@@ -375,7 +375,7 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col">
-                    <h4>AutoCash</h4>
+                    <h4>Mijnautoverkopen</h4>
                     <ul class="footer-links">
                         <li><a href="/">Home</a></li>
                         <li><a href="/#hoe-het-werkt">Hoe het werkt</a></li>
@@ -416,7 +416,7 @@
             
             <div class="footer-bottom">
                 <div class="copyright">
-                    © 2025 AutoCash. Alle rechten voorbehouden.
+                    © 2025 Mijnautoverkopen. Alle rechten voorbehouden.
                 </div>
                 <div class="social-links">
                     <a href="#" class="social-link">
