--- a/public/privacybeleid.html
+++ b/public/privacybeleid.html
@@ -351,16 +351,16 @@
             
             <div class="content-card">
                 <h2>1. Inleiding</h2>
-                <p>Bij Mijnautoverkopen.be (handelsnaam van AutoCash BV) hechten wij grote waarde aan de bescherming van uw privacy en persoonsgegevens. Dit privacybeleid is opgesteld om u duidelijk te informeren over welke gegevens wij verzamelen, waarom we deze verzamelen, en hoe we deze gebruiken en beschermen.</p>
+                <p>Bij Mijnautoverkopen.be (handelsnaam van Mijnautoverkopen BV) hechten wij grote waarde aan de bescherming van uw privacy en persoonsgegevens. Dit privacybeleid is opgesteld om u duidelijk te informeren over welke gegevens wij verzamelen, waarom we deze verzamelen, en hoe we deze gebruiken en beschermen.</p>
                 <p>Mijnautoverkopen.be verwerkt persoonsgegevens in overeenstemming met de geldende privacywetgeving, waaronder de Algemene Verordening Gegevensbescherming (AVG).</p>
 
                 <h2>2. Verwerkingsverantwoordelijke</h2>
                 <p>De verwerkingsverantwoordelijke voor uw persoonsgegevens is:</p>
                 <p>
-                    AutoCash BV<br>
+                    Mijnautoverkopen BV<br>
                     Handelend onder de naam: Mijnautoverkopen.be<br>
                     Industrieweg 10<br>
-                    1050 Brussel<br>
+                    1000 Sint-Niklaas<br>
                     KvK-nummer: 12345678<br>
                     E-mail: privacy@mijnautoverkopen.be
                 </p>
@@ -482,7 +482,7 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col">
-                    <h4>AutoCash</h4>
+                    <h4>Mijnautoverkopen</h4>
                     <ul class="footer-links">
                         <li><a href="/">Home</a></li>
                         <li><a href="/#hoe-het-werkt">Hoe het werkt</a></li>
@@ -523,7 +523,7 @@
             
             <div class="footer-bottom">
                 <div class="copyright">
-                    © 2025 AutoCash. Alle rechten voorbehouden.
+                    © 2025 Mijnautoverkopen. Alle rechten voorbehouden.
                 </div>
                 <div class="social-links">
                     <a href="#" class="social-link">
