--- a/public/cookiebeleid.html
+++ b/public/cookiebeleid.html
@@ -507,7 +507,7 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col">
-                    <h4>AutoCash</h4>
+                    <h4>Mijnautoverkopen</h4>
                     <ul class="footer-links">
                         <li><a href="/">Home</a></li>
                         <li><a href="/#hoe-het-werkt">Hoe het werkt</a></li>
@@ -548,7 +548,7 @@
             
             <div class="footer-bottom">
                 <div class="copyright">
-                    © 2025 AutoCash. Alle rechten voorbehouden.
+                    © 2025 Mijnautoverkopen. Alle rechten voorbehouden.
                 </div>
                 <div class="social-links">
                     <a href="#" class="social-link">
