--- a/public/index.html
+++ b/public/index.html
@@ -1722,8 +1722,8 @@ header.scrolled {
   "@type": "AutoDealer",
   "name": "Mijnautoverkopen.be",
   "image": "https://mijnautoverkopen.be/logo.png",
-  "telephone": "0800-1234567",
-  "email": "info@autocash.nl",
+  "telephone": "0476259384",
+  "email": "info@mijnautoverkopen.be",
   "address": {
     "@type": "PostalAddress",
     "streetAddress": "Industrieweg 10",
@@ -2350,7 +2350,7 @@ header.scrolled {
                                     </div>
                                     <div class="author-info">
                                         <h4>Jeroen de Vries</h4>
-                                        <p>Amsterdam</p>
+                                        <p>Antwerpen</p>
                                     </div>
                                 </div>
                             </div>
@@ -2481,7 +2481,7 @@ header.scrolled {
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col">
-                    <h4>AutoCash</h4>
+                    <h4>Mijnautoverkopen</h4>
                     <ul class="footer-links">
                         <li><a href="#hoe-het-werkt">Hoe het werkt</a></li>
                         <li><a href="#voordelen">Voordelen</a></li>
@@ -2496,7 +2496,7 @@ header.scrolled {
                     <ul class="footer-contact">
                         <li>
                             <svg viewBox="0 0 24 24"><path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path><circle cx="12" cy="10" r="3"></circle></svg>
-                            <span>Hoofdkantoor: Industrieweg 10, 1234 AB Amsterdam</span>
+                            <span>Hoofdkantoor: 9100 Sint-Niklaas</span>
                         </li>
                         <li>
                             <svg viewBox="0 0 24 24"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"></path></svg>
@@ -2522,11 +2522,11 @@ header.scrolled {
                 <div class="footer-col">
                     <h4>Locaties</h4>
                     <ul class="footer-links">
-                        <li><a href="#">Amsterdam</a></li>
-                        <li><a href="#">Rotterdam</a></li>
-                        <li><a href="#">Utrecht</a></li>
-                        <li><a href="#">Den Haag</a></li>
-                        <li><a href="#">Eindhoven</a></li>
+                        <li><a href="#">Sint-Niklaas</a></li>
+                        <li><a href="#">Antwerpen</a></li>
+                        <li><a href="#">Gent</a></li>
+                        <li><a href="#">Brugge</a></li>
+                        <li><a href="#">Hasselt</a></li>
                         <li><a href="#">Alle locaties</a></li>
                     </ul>
                 </div>
