more edits homepage

--- a/public/index.html
+++ b/public/index.html
@@ -2559,7 +2559,7 @@ header.scrolled {
                         </li>
                         <li>
                             <svg viewBox="0 0 24 24"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg>
-                            <span>info@autocash.nl</span>
+                            <span>info@mijnautoverkopen.be</span>
                         </li>
                     </ul>
                 </div>
@@ -2589,7 +2589,7 @@ header.scrolled {
             
             <div class="footer-bottom">
                 <div class="copyright">
-                    © 2025 AutoCash. Alle rechten voorbehouden.
+                    © 2025 Mijnautoverkopen. Alle rechten voorbehouden.
                 </div>
                 <div class="social-links">
                     <a href="#" class="social-link">
