--- a/public/index.html
+++ b/public/index.html
@@ -1919,7 +1919,19 @@ header.scrolled {
    <header>
         <div class="container">
             <nav>
-                <div class="logo">Mijnautoverkopen.be</div>
+                <div class="logo">
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 70" width="180" height="40">
+    <!-- Car silhouette -->
+    <path d="M45 40c-2.5 0-4.5 2-4.5 4.5S42.5 49 45 49s4.5-2 4.5-4.5S47.5 40 45 40zm30 0c-2.5 0-4.5 2-4.5 4.5S72.5 49 75 49s4.5-2 4.5-4.5S77.5 40 75 40z" fill="#4f46e5"/>
+    <path d="M87 35h-3l-6-15c-1.5-3.7-4-5-7-5H45c-3 0-5.5 1.3-7 5l-6 15h-3c-1.7 0-3 1.3-3 3v7c0 1.7 1.3 3 3 3h2.1c.5 3.4 3.4 6 6.9 6s6.4-2.6 6.9-6H73c.5 3.4 3.4 6 6.9 6s6.4-2.6 6.9-6H87c1.7 0 3-1.3 3-3v-7c0-1.7-1.3-3-3-3zm-49.5-10.7c.5-1.2 1-2.3 3-2.3h34c2 0 2.5 1.1 3 2.3L83 35H37l.5-10.7z" fill="#4f46e5"/>
+    
+    <!-- Brand name text -->
+    <path d="M105 45V25h3v20h-3zm10 0V25h3v8.5l7-8.5h3.7l-6.2 7.5 6.8 12.5h-3.6l-5.2-9.6-2.5 2.6v7h-3zm27-12.5h-8v5.2c0 2.5.7 4.3 3.1 4.3 1.7 0 3.2-1 3.6-2.6l1.3 1.8c-.9 1.9-2.8 3.3-5.2 3.3-3.9 0-5.9-2.7-5.9-6.5V25h3v7.5h8v-7.5h3v20h-3v-12.5zm21 10v2.5h-11V25h10.6v2.5h-7.6v7.5h6.9v2.5h-6.9v7.5h8zm9 2.5h-3V25h6.7c3.4 0 5.3 2.3 5.3 5.2 0 2.5-1.4 4.5-3.5 5.1l4.3 9.7h-3.3l-4-9h-2.5v9zm0-11.5h3.5c1.7 0 2.5-1.3 2.5-2.8s-.8-2.7-2.5-2.7h-3.5v5.5zm20 9c.6.8 1.9 1.4 3.3 1.4 1.8 0 2.7-.7 2.7-1.9 0-1.3-1.4-1.7-2.9-2-2.2-.5-4.6-1.1-4.6-4 0-2.3 2-4 5-4 2.1 0 3.7.8 4.7 1.9l-1.5 1.9c-.6-.7-1.7-1.3-3.1-1.3-1.6 0-2.3.7-2.3 1.7 0 1.1 1.2 1.5 2.7 1.8 2.2.5 4.8 1.1 4.8 4.2 0 2.5-2 4.2-5.5 4.2-2.2 0-4.1-.7-5.2-2l1.6-2zm20-17.5v20h-3v-20h3zm12 0v17.5h7v2.5h-10v-20h3zm25 0v20h-3V30.7L239 45h-2l-7-14.3V45h-3V25h4l6 13 6-13h4z" fill="#4f46e5"/>
+    
+    <!-- .be part with different color -->
+    <path d="M270 45V25h3v8.5l7-8.5h3.7l-6.2 7.5 6.8 12.5h-3.6l-5.2-9.6-2.5 2.6v7h-3zm22 0c-4.2 0-6.9-3.1-6.9-7.7v-4.6c0-4.6 2.7-7.7 6.9-7.7 4.1 0 6.8 3.1 6.8 7.7v4.6c0 4.6-2.7 7.7-6.8 7.7zm0-2.5c2.2 0 3.8-1.6 3.8-4.5v-5.5c0-2.9-1.6-4.5-3.8-4.5s-3.9 1.6-3.9 4.5V38c0 2.9 1.7 4.5 3.9 4.5z" fill="#ec4899"/>
+  </svg>
+</div>
 <div class="mobile-menu-toggle" id="mobile-menu-toggle">
     <span></span>
     <span></span>
