--- a/public/index.html
+++ b/public/index.html
@@ -1919,18 +1919,66 @@ header.scrolled {
    <header>
         <div class="container">
             <nav>
-                <div class="logo">
-  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 70" width="180" height="40">
-    <!-- Car silhouette -->
-    <path d="M45 40c-2.5 0-4.5 2-4.5 4.5S42.5 49 45 49s4.5-2 4.5-4.5S47.5 40 45 40zm30 0c-2.5 0-4.5 2-4.5 4.5S72.5 49 75 49s4.5-2 4.5-4.5S77.5 40 75 40z" fill="#4f46e5"/>
-    <path d="M87 35h-3l-6-15c-1.5-3.7-4-5-7-5H45c-3 0-5.5 1.3-7 5l-6 15h-3c-1.7 0-3 1.3-3 3v7c0 1.7 1.3 3 3 3h2.1c.5 3.4 3.4 6 6.9 6s6.4-2.6 6.9-6H73c.5 3.4 3.4 6 6.9 6s6.4-2.6 6.9-6H87c1.7 0 3-1.3 3-3v-7c0-1.7-1.3-3-3-3zm-49.5-10.7c.5-1.2 1-2.3 3-2.3h34c2 0 2.5 1.1 3 2.3L83 35H37l.5-10.7z" fill="#4f46e5"/>
-    
-    <!-- Brand name text -->
-    <path d="M105 45V25h3v20h-3zm10 0V25h3v8.5l7-8.5h3.7l-6.2 7.5 6.8 12.5h-3.6l-5.2-9.6-2.5 2.6v7h-3zm27-12.5h-8v5.2c0 2.5.7 4.3 3.1 4.3 1.7 0 3.2-1 3.6-2.6l1.3 1.8c-.9 1.9-2.8 3.3-5.2 3.3-3.9 0-5.9-2.7-5.9-6.5V25h3v7.5h8v-7.5h3v20h-3v-12.5zm21 10v2.5h-11V25h10.6v2.5h-7.6v7.5h6.9v2.5h-6.9v7.5h8zm9 2.5h-3V25h6.7c3.4 0 5.3 2.3 5.3 5.2 0 2.5-1.4 4.5-3.5 5.1l4.3 9.7h-3.3l-4-9h-2.5v9zm0-11.5h3.5c1.7 0 2.5-1.3 2.5-2.8s-.8-2.7-2.5-2.7h-3.5v5.5zm20 9c.6.8 1.9 1.4 3.3 1.4 1.8 0 2.7-.7 2.7-1.9 0-1.3-1.4-1.7-2.9-2-2.2-.5-4.6-1.1-4.6-4 0-2.3 2-4 5-4 2.1 0 3.7.8 4.7 1.9l-1.5 1.9c-.6-.7-1.7-1.3-3.1-1.3-1.6 0-2.3.7-2.3 1.7 0 1.1 1.2 1.5 2.7 1.8 2.2.5 4.8 1.1 4.8 4.2 0 2.5-2 4.2-5.5 4.2-2.2 0-4.1-.7-5.2-2l1.6-2zm20-17.5v20h-3v-20h3zm12 0v17.5h7v2.5h-10v-20h3zm25 0v20h-3V30.7L239 45h-2l-7-14.3V45h-3V25h4l6 13 6-13h4z" fill="#4f46e5"/>
-    
-    <!-- .be part with different color -->
-    <path d="M270 45V25h3v8.5l7-8.5h3.7l-6.2 7.5 6.8 12.5h-3.6l-5.2-9.6-2.5 2.6v7h-3zm22 0c-4.2 0-6.9-3.1-6.9-7.7v-4.6c0-4.6 2.7-7.7 6.9-7.7 4.1 0 6.8 3.1 6.8 7.7v4.6c0 4.6-2.7 7.7-6.8 7.7zm0-2.5c2.2 0 3.8-1.6 3.8-4.5v-5.5c0-2.9-1.6-4.5-3.8-4.5s-3.9 1.6-3.9 4.5V38c0 2.9 1.7 4.5 3.9 4.5z" fill="#ec4899"/>
-  </svg>
+                <div class="logo"><svg viewBox="0 0 180 70" xmlns="http://www.w3.org/2000/svg">
+  <!-- Bottom bill - green 100€ inspired -->
+  <rect x="35" y="30" width="70" height="20" rx="2" ry="2" stroke="#0066cc" stroke-width="1" fill="#E8F6EB" />
+  
+  <!-- Security features -->
+  <rect x="65" y="32" width="18" height="16" rx="1" ry="1" stroke="#0066cc" stroke-width="0.5" fill="none" />
+  <circle cx="74" cy="40" r="6" stroke="#0066cc" stroke-width="0.5" fill="none" />
+  <path d="M42,35 L58,35 M42,37 L58,37 M42,39 L58,39 M42,41 L58,41 M42,43 L58,43 M42,45 L58,45" 
+        stroke="#0066cc" stroke-width="0.3" stroke-dasharray="2,1" />
+  <path d="M90,35 L98,35 M90,37 L98,37 M90,39 L98,39 M90,41 L98,41 M90,43 L98,43 M90,45 L98,45" 
+        stroke="#0066cc" stroke-width="0.3" />
+  
+  <!-- Euro symbol and value -->
+  <text x="50" y="43" font-family="Arial, sans-serif" font-size="10" font-weight="bold" fill="#0066cc">€100</text>
+  
+  <!-- Middle bill - blue 20€ inspired -->
+  <rect x="40" y="25" width="70" height="20" rx="2" ry="2" stroke="#0066cc" stroke-width="1" fill="#E1F0FF" />
+  
+  <!-- Security features -->
+  <rect x="70" y="27" width="18" height="16" rx="1" ry="1" stroke="#0066cc" stroke-width="0.5" fill="none" />
+  <circle cx="79" cy="35" r="6" stroke="#0066cc" stroke-width="0.5" fill="none" />
+  <path d="M47,30 L63,30 M47,32 L63,32 M47,34 L63,34 M47,36 L63,36 M47,38 L63,38 M47,40 L63,40" 
+        stroke="#0066cc" stroke-width="0.3" stroke-dasharray="2,1" />
+  <path d="M95,30 L103,30 M95,32 L103,32 M95,34 L103,34 M95,36 L103,36 M95,38 L103,38 M95,40 L103,40" 
+        stroke="#0066cc" stroke-width="0.3" />
+  
+  <!-- Euro symbol and value -->
+  <text x="55" y="38" font-family="Arial, sans-serif" font-size="10" font-weight="bold" fill="#0066cc">€20</text>
+  
+  <!-- Top bill - red 10€ inspired -->
+  <rect x="45" y="20" width="70" height="20" rx="2" ry="2" stroke="#0066cc" stroke-width="1" fill="#FFECEC" />
+  
+  <!-- Security features -->
+  <rect x="75" y="22" width="18" height="16" rx="1" ry="1" stroke="#0066cc" stroke-width="0.5" fill="none" />
+  <circle cx="84" cy="30" r="6" stroke="#0066cc" stroke-width="0.5" fill="none" />
+  <path d="M52,25 L68,25 M52,27 L68,27 M52,29 L68,29 M52,31 L68,31 M52,33 L68,33 M52,35 L68,35" 
+        stroke="#0066cc" stroke-width="0.3" stroke-dasharray="2,1" />
+  <path d="M100,25 L108,25 M100,27 L108,27 M100,29 L108,29 M100,31 L108,31 M100,33 L108,33 M100,35 L108,35" 
+        stroke="#0066cc" stroke-width="0.3" />
+  
+  <!-- Euro symbol and value -->
+  <text x="60" y="33" font-family="Arial, sans-serif" font-size="10" font-weight="bold" fill="#0066cc">€10</text>
+  
+  <!-- Simple arrow suggesting transaction/sale -->
+  <path d="M120,35 L140,35 M135,30 L140,35 L135,40" 
+        stroke="#0066cc"
+        stroke-width="1.5"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+        fill="none"/>
+  
+  <!-- Clean type -->
+  <text x="90" y="65" 
+        font-family="Helvetica, Arial, sans-serif" 
+        font-size="9" 
+        font-weight="300" 
+        letter-spacing="1" 
+        text-anchor="middle" 
+        fill="#333">mijnautoverkopen</text>
+</svg>
 </div>
 <div class="mobile-menu-toggle" id="mobile-menu-toggle">
     <span></span>
