--- a/public/index.html
+++ b/public/index.html
@@ -1959,8 +1959,8 @@ header.scrolled {
   <path d="M100,25 L108,25 M100,27 L108,27 M100,29 L108,29 M100,31 L108,31 M100,33 L108,33 M100,35 L108,35" 
         stroke="#0066cc" stroke-width="0.3" />
   
-  <!-- Euro symbol and value -->
-  <text x="60" y="33" font-family="Arial, sans-serif" font-size="10" font-weight="bold" fill="#0066cc">€10</text>
+  <!-- Euro symbol and value - ADJUSTED -->
+  <text x="54" y="33" font-family="Arial, sans-serif" font-size="10" font-weight="bold" fill="#0066cc">€10</text>
   
   <!-- Simple arrow suggesting transaction/sale -->
   <path d="M120,35 L140,35 M135,30 L140,35 L135,40" 
