--- a/public/index.html
+++ b/public/index.html
@@ -1919,7 +1919,7 @@ header.scrolled {
    <header>
         <div class="container">
             <nav>
-                <div class="logo"><svg viewBox="0 0 180 70" xmlns="http://www.w3.org/2000/svg">
+                <div class="logo"><svg viewBox="0 0 180 70" xmlns="http://www.w3.org/2000/svg" width="180" height="70">
   <!-- Bottom bill - green 100€ inspired -->
   <rect x="35" y="30" width="70" height="20" rx="2" ry="2" stroke="#0066cc" stroke-width="1" fill="#E8F6EB" />
   
