--- a/public/index.html
+++ b/public/index.html
@@ -1903,12 +1903,11 @@ header.scrolled {
 <div class="mobile-nav-backdrop" id="mobile-backdrop"></div>
 <div class="mobile-nav" id="mobile-nav">
   <div class="mobile-nav-links">
-    <a href="#recent-articles">Recent Artikelen</a>
-    <a href="#voordelen">Voordelen</a>
-    <a href="#testimonials">Ervaringen</a>
-    <a href="#veelgestelde-vragen">FAQ</a>
-    <a href="/blog">Blog</a>
-    <a href="/#contact">Contact</a>
+    <a href="/">Home</a>
+<a href="/blog">Blog</a>
+<a href="#hoe-het-werkt">Hoe het werkt</a>
+<a href="#voordelen">Voordelen</a>
+<a href="#contact">Contact</a>
 </div>
 </div>
     <!-- Glow Effects -->
@@ -1986,12 +1985,11 @@ header.scrolled {
     <span></span>
 </div>
                <div class="nav-links">
-    <a href="#recent-articles">Recent Artikelen</a>
-    <a href="#voordelen">Voordelen</a>
-    <a href="#testimonials">Ervaringen</a>
-    <a href="#veelgestelde-vragen">FAQ</a>
-    <a href="/blog">Blog</a>
-    <a href="/#contact">Contact</a>
+    <a href="/">Home</a>
+<a href="/blog">Blog</a>
+<a href="#hoe-het-werkt">Hoe het werkt</a>
+<a href="#voordelen">Voordelen</a>
+<a href="#contact">Contact</a>
 </div>
             </nav>
         </div>
