--- a/public/index.html
+++ b/public/index.html
@@ -2345,7 +2345,7 @@ header.scrolled {
         <div class="container">
             <div class="section-header">
                 <h2>Waarom Mijnautoverkopen kiezen?</h2>
-                <p>Als grootste auto-inkoper van Nederland bieden wij een unieke service met talloze voordelen</p>
+                <p>Als grote auto-inkoper in België bieden wij een unieke service met talloze voordelen</p>
             </div>
             
             <div class="features-grid">
@@ -2567,7 +2567,7 @@ header.scrolled {
                 <p>Ontvang binnen 24 uur een eerlijk bod en ervaar hoe eenvoudig het verkopen van uw auto kan zijn.</p>
                 <div class="cta-buttons">
                     <a href="#" class="btn btn-secondary btn-lg"><span>Direct een bod aanvragen</span></a>
-                    <a href="tel:0800-1234567" class="btn btn-outline btn-lg">Bel ons: 0800-1234567</a>
+                    <a href="tel:0031617857017" class="btn btn-outline btn-lg">Bel ons: 0031617857017</a>
                 </div>
                 
                 <div class="trust-badges">
@@ -2615,7 +2615,7 @@ header.scrolled {
                         </li>
                         <li>
                             <svg viewBox="0 0 24 24"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"></path></svg>
-                            <span>0800-1234567 (gratis)</span>
+                            <span>0031617857017</span>
                         </li>
                         <li>
                             <svg viewBox="0 0 24 24"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg>
