updates main page

--- a/public/index.html
+++ b/public/index.html
@@ -2423,7 +2423,7 @@ header.scrolled {
     <section id="recent-articles" class="recent-articles">
         <div class="container">
             <div class="section-header">
-                <h2>Recent Artikelen</h2>
+                <h2>Blog</h2>
                 <p>Ontdek de nieuwste tips en adviezen over het verkopen van uw auto</p>
             </div>
             
