--- a/public/index.html
+++ b/public/index.html
@@ -2599,7 +2599,7 @@ header.scrolled {
                 <div class="footer-col">
                     <h4>Mijnautoverkopen</h4>
                     <ul class="footer-links">
-                        <li><a href="#recent-articles">Recent Artikelen</a></li>
+                        <li><a href="#recent-articles">Blog</a></li>
                         <li><a href="#voordelen">Voordelen</a></li>
                         <li><a href="#testimonials">Klantervaringen</a></li>
                         <li><a href="#veelgestelde-vragen">Veelgestelde vragen</a></li>
