--- a/public/index.html
+++ b/public/index.html
@@ -2471,6 +2471,23 @@ header.scrolled {
                                 </div>
                             </div>
                         </div>
+<div class="testimonial-slide">
+                            <div class="testimonial-content glass-card">
+                                <div class="testimonial-text">
+                                    "Ik was onder de indruk van het gemak waarmee ik mijn auto kon verkopen. Het bod was eerlijk, de afhandeling professioneel en het geld stond dezelfde dag nog op mijn rekening. Absoluut een aanrader!"
+                                </div>
+                                <div class="testimonial-author">
+                                    <div class="author-image">
+                                        <img src="/api/placeholder/60/60" alt="Klant foto">
+                                    </div>
+                                    <div class="author-info">
+                                        <h4>Jeroen de Vries</h4>
+                                        <p>Antwerpen</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
                 
