--- a/public/index.html
+++ b/public/index.html
@@ -2208,7 +2208,7 @@ header.scrolled {
                     <div class="form-group">
                         <label for="email">E-mail</label>
                         <input type="email" id="email" name="email" class="form-control" 
-                               placeholder="uw@email.nl" 
+                               placeholder="uw@email.be" 
                                required>
                         <div id="email-error" class="error-message">Voer een geldig e-mailadres in</div>
                     </div>
@@ -2503,7 +2503,7 @@ header.scrolled {
             </div>
             <div class="testimonial-author">
                 <div class="author-image">
-                    <img src="/api/placeholder/60/60" alt="Klant foto">
+                    <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Klant foto">
                 </div>
                 <div class="author-info">
                     <h4>Sophie Martens</h4>
