--- a/public/index.html
+++ b/public/index.html
@@ -2485,7 +2485,7 @@ header.scrolled {
             </div>
             <div class="testimonial-author">
                 <div class="author-image">
-                    <img src="/api/placeholder/60/60" alt="Klant foto">
+                    <img src="https://images.unsplash.com/photo-1522529599102-193c0d76b5b6?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Klant foto">
                 </div>
                 <div class="author-info">
                     <h4>Jeroen de Vries</h4>
@@ -2521,7 +2521,7 @@ header.scrolled {
             </div>
             <div class="testimonial-author">
                 <div class="author-image">
-                    <img src="/api/placeholder/60/60" alt="Klant foto">
+                    <img src="https://images.unsplash.com/photo-1539571696357-5a69c17a67c6?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Klant foto">
                 </div>
                 <div class="author-info">
                     <h4>Thomas Janssens</h4>
@@ -2539,7 +2539,7 @@ header.scrolled {
             </div>
             <div class="testimonial-author">
                 <div class="author-image">
-                    <img src="/api/placeholder/60/60" alt="Klant foto">
+                    <img src="https://images.unsplash.com/photo-1560250097-0b93528c311a?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OTB8fHBlb3BsZXxlbnwwfHwwfHx8MA%3D%3D" alt="Klant foto">
                 </div>
                 <div class="author-info">
                     <h4>Luc Vermeulen</h4>
