--- a/public/index.html
+++ b/public/index.html
@@ -1927,10 +1927,11 @@ header.scrolled {
 <div class="mobile-nav" id="mobile-nav">
   <div class="mobile-nav-links">
     <a href="/">Home</a>
-<a href="/blog">Blog</a>
-<a href="#hoe-het-werkt">Hoe het werkt</a>
-<a href="#voordelen">Voordelen</a>
-<a href="#contact">Contact</a>
+    <a href="#auto-verkopen">Auto verkopen</a>
+    <a href="#voordelen">Voordelen</a>
+    <a href="#veelgestelde-vragen">Veelgestelde vragen</a>
+    <a href="#testimonials">Klantervaringen</a>
+    <a href="/blog">Blog</a>
 </div>
 </div>
     <!-- Glow Effects -->
@@ -2007,12 +2008,13 @@ header.scrolled {
     <span></span>
     <span></span>
 </div>
-               <div class="nav-links">
+              <div class="nav-links">
     <a href="/">Home</a>
-<a href="/blog">Blog</a>
-<a href="#hoe-het-werkt">Hoe het werkt</a>
-<a href="#voordelen">Voordelen</a>
-<a href="#contact">Contact</a>
+    <a href="#auto-verkopen">Auto verkopen</a>
+    <a href="#voordelen">Voordelen</a>
+    <a href="#veelgestelde-vragen">Veelgestelde vragen</a>
+    <a href="#testimonials">Klantervaringen</a>
+    <a href="/blog">Blog</a>
 </div>
             </nav>
         </div>
@@ -2681,11 +2683,12 @@ header.scrolled {
                 <div class="footer-col">
                     <h4>Mijnautoverkopen</h4>
                     <ul class="footer-links">
-                        <li><a href="#recent-articles">Blog</a></li>
-                        <li><a href="#voordelen">Voordelen</a></li>
-                        <li><a href="#testimonials">Klantervaringen</a></li>
-                        <li><a href="#veelgestelde-vragen">Veelgestelde vragen</a></li>
-                        <li><a href="#">Over ons</a></li>
+                         <a href="/">Home</a>
+   <li><a href="#auto-verkopen">Auto verkopen</a></li>
+     <li><a href="#voordelen">Voordelen</a></li>
+     <li><a href="#veelgestelde-vragen">Veelgestelde vragen</a></li>
+     <li><a href="#testimonials">Klantervaringen</a></li>
+     <li><a href="/blog">Blog</a></li>
                     </ul>
                 </div>
                 
