--- a/public/index.html
+++ b/public/index.html
@@ -244,10 +244,11 @@ header.scrolled {
     gap: 30px;
 }
         
-       .nav-links a {
+     .nav-links a {
     color: var(--text-dark);
     text-decoration: none;
     transition: color 0.3s;
+    position: relative;
 }
         
         .nav-links a::after {
