--- a/public/index.html
+++ b/public/index.html
@@ -1840,14 +1840,14 @@ header.scrolled {
   "@type": "AutoDealer",
   "name": "Mijnautoverkopen.be",
   "image": "https://mijnautoverkopen.be/logo.png",
-  "telephone": "0476259384",
+  "telephone": "+32 484 13 36 49",
   "email": "info@mijnautoverkopen.be",
   "address": {
     "@type": "PostalAddress",
-    "streetAddress": "Industrieweg 10",
-    "addressLocality": "Amsterdam",
-    "postalCode": "1234 AB",
-    "addressCountry": "NL"
+    "streetAddress": "Nieuwe Molenstraat",
+    "addressLocality": "Sint-Niklaas",
+    "postalCode": "9100",
+    "addressCountry": "BE"
   },
   "openingHoursSpecification": [
     {
@@ -1865,7 +1865,7 @@ header.scrolled {
   ],
   "url": "https://mijnautoverkopen.be",
   "priceRange": "€€",
-  "areaServed": ["Amsterdam", "Rotterdam", "Utrecht", "Den Haag", "Eindhoven"]
+  "areaServed": ["Brussel", "Sint-Niklaas", "Gent", "Leuven", "Hasselt"]
 }
 </script>
 
@@ -2662,7 +2662,7 @@ header.scrolled {
                 <p>Ontvang binnen 24 uur een eerlijk bod en ervaar hoe eenvoudig het verkopen van uw auto kan zijn.</p>
                 <div class="cta-buttons">
                     <a href="#" class="btn btn-secondary btn-lg"><span>Direct een bod aanvragen</span></a>
-                    <a href="tel:0031617857017" class="btn btn-outline btn-lg">Bel ons: 0031617857017</a>
+                    <a href="tel:0032484133649" class="btn btn-outline btn-lg">Bel ons: 0032484133649</a>
                 </div>
                 
                 <div class="trust-badges">
