--- a/public/index.html
+++ b/public/index.html
@@ -2662,7 +2662,7 @@ header.scrolled {
                 <p>Ontvang binnen 24 uur een eerlijk bod en ervaar hoe eenvoudig het verkopen van uw auto kan zijn.</p>
                 <div class="cta-buttons">
                     <a href="#" class="btn btn-secondary btn-lg"><span>Direct een bod aanvragen</span></a>
-                    <a href="tel:+32484133649" class="btn btn-outline btn-lg">Bel ons: +32 484 13 36 49</a>
+                    <a href="tel:+32484133649" class="btn btn-outline btn-lg"></a>
                 </div>
                 
                 <div class="trust-badges">
